--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,32 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# OS X
+.DS_Store*
+Icon?
+._*
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# testing
-/coverage
+# Linux
+.directory
+*~
 
-# production
-/build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# npm
+node_modules
+package-lock.json
+*.log
+*.gz
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# Coveralls
+coverage
+
+# Benchmarking
+benchmarks/graphs
+
+#webstorm
+.idea
+
+logs
